--- a/responsive.css
+++ b/responsive.css
@@ -165,6 +165,10 @@
     .form-section-maindiv{
         flex-direction: column-reverse;
     }
+    .form-section{
+        padding-bottom: 0px;
+    }
+    
     .hover-text{
         top: 60%;
         left: 25%;
@@ -202,6 +206,12 @@
     .hover-text{
         display: none;
     }
+    .me-main{
+        height: 40%;
+    }
+    .me-info{
+        padding-top: 0px;
+    }
     
 }
 @media (max-width:600px) {
@@ -227,10 +237,21 @@
         font-size: 50px;
     }
     .form-section{
-        padding-bottom: 200px;
+        padding-bottom: 100px;
     }
     .knowladge{
         margin-bottom: 30px;
+    }
+    .contact-div h2{
+        font-size: 32px;
+
+    }
+    .contact-div p{
+        font-size: 14px;
+        
+    }
+    .me-info{
+        padding-top: 200px;
     }
 }
 
@@ -239,14 +260,13 @@
         font-size: 30px;
     }
     .form-section{
-        padding-bottom: 300px;
     }
     .me-img img{
         width: 200px;
         height: 200px;
     }
     .me-info{
-        padding-top: 300px;
+        padding-top: 80px;
     }
     .slider-div ul li img{
         width: 70px;
